PropertyGroup * Add PropertyGroup  component * Reorg SideBar to folder * Fix cheveron-up icon * Implement PropertyGroup * Add collapsing to PropertyGroup

--- a/public/fonts.css
+++ b/public/fonts.css
@@ -87,6 +87,7 @@
   content: '\e313';
 }
 .icon-cheveron-up:before {
+  display: inline-block;
   content: '\e313';
   transform: rotate(180deg);
 }
